# gayatcu

./: .gitignore  CODE_QUALITY_REPORT.md  DEPLOYMENT.md  README.md  REFACTORING.md  RELATORIO_DEPENDENCIAS.md  STATUS_ATUAL.md  analisecoderabbit_debug.md  app.py  conteudo.csv  conteudo.json  db.py  llm.txt  monitoring.py  pyproject.toml  repomix-output.xml  requirements.txt  session.py  test_app.py  utils.py
.omc/: project-memory.json
.omc/autopilot/: spec.md
.omc/plans/: autopilot-impl.md  dashboard-tcu-v2.md  open-questions.md
.omc/sessions/: 82235e4e-6541-498e-b2d1-dd4c66f782f3.json
.omc/state/: agent-replay-82235e4e-6541-498e-b2d1-dd4c66f782f3.jsonl  agent-replay-d97c15b2-2284-4432-96b5-ab5c6436b8c5.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json
.omc/state/checkpoints/: checkpoint-2026-03-09T00-17-19-359Z.json
.streamlit/: config.toml  secrets.toml.example
components/: __init__.py  charts.py
pages/: 1_📋_Checklist.py  2_📅_Revisoes.py  3_📊_Estatisticas.py
scripts/: pre_deploy_check.sh  validate_env.sh
tests/: conftest.py  test_db.py  test_utils.py
