[project]
name = "gayatcu"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "sqlmodel>=0.0.37",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
