[project]
name = "gayatcu"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "psutil>=7.2.2",
    "sqlmodel>=0.0.37",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # function call in default argument (Streamlit patterns)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
